@@ -18,6 +18,7 @@
   throughly.
  ----------------------------------------------------------------------*/
 #include <stdio.h>
+#include <stdlib.h>
 #include <string.h>
 #include "avcall.h"
 FILE* out;
